--- a/java/pom.xml
+++ b/java/pom.xml
@@ -35,10 +35,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.14</version>
+    </dependency>
 
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
