--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/prison?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://database.don.red:3306/prison
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=zBQXvuAns78urv7e
 
 mybatis.mapperLocations=classpath:static/*.xml
