--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://database.don.red:3306/prison
+spring.datasource.url=jdbc:mysql://database.don.red:3306/prison?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=zBQXvuAns78urv7e
+spring.datasource.password=ZuvjKAg8ZqWYCrp2
 
 mybatis.mapperLocations=classpath:static/*.xml
